# synopsis

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SECURITY.md  index.md  pyproject.toml
.docker/: docker-compose.yml
.github/workflows/: docker.yml
scripts/: build.sh  run.sh
src/synopsis/: __init__.py  __main__.py
src/synopsis/app/: interface.py
src/synopsis/app/api/: index.py
src/synopsis/app/api/endpoints/: item.py  oauth.py  profile.py  timeslip.py  users.py
src/synopsis/core/: config.py  session.py
src/synopsis/data/: database.py  primitives.py
src/synopsis/data/models/: items.py  tokens.py  users.py
src/synopsis/utils/: generators.py  standard.py
