[tool.poetry]
authors = ["FL03 <jo3mccain@icloud.com>"]
description = "Synopsis is a complete file management application equipped with a number of unique extraction tools"
license = "MIT"
name = "synopsis"
version = "0.1.0"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.poetry.dependencies]
Jinja2 = "latest"
arweave-python-client = "latest"
bcrypt = { extras = ["cryptography"], version = "latest" }
fastapi = "latest"
matplotlib = "latest"
numpy = "latest"
pandas = "latest"
panel = "latest"
passlib = "latest"
plotly = "latest"
python = ">=3.9,<3.11"
python-dotenv = "latest"
python-jose = "latest"
tortoise-orm = { extras = ["asyncpg"], version = "latest" }
uvicorn = "0.17.5"
web3 = "latest"

[tool.poetry.dev-dependencies]
black = "latest"
pytest = "latest"